--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -26,6 +26,7 @@
             android:layout_height="50dp"
             android:layout_marginLeft="50dp"
             android:layout_marginTop="15dp"
+            android:maxLength="25"
             android:layout_marginRight="50dp"
             android:background="@drawable/login_edittext_bg"
             android:hint="@string/email"
