--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#ffffff</color>
     <color name="receitaPrimary">#306F32</color>
     <color name="receitaSecundary">#46A048</color>
+    <color name="despesaPrimary">#BB372F</color>
+    <color name="despesaSecundary">#B84A43</color>
 </resources>
