--- a/app/src/main/res/drawable/ic_porcentagem_gray.xml
+++ b/app/src/main/res/drawable/ic_porcentagem_gray.xml
@@ -3,7 +3,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:drawable="@drawable/extrato_red"
+        android:drawable="@drawable/porcentagem_grey"
         android:width="25dp"
         android:height="25dp"
         />
