--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/login_bg">
@@ -36,6 +35,7 @@
             android:layout_marginRight="50dp"
             android:background="@drawable/login_edittext_bg"
             android:hint="@string/first_name"
+            android:maxLength="25"
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textColorHint="#CCC" />
@@ -49,6 +49,7 @@
             android:layout_marginRight="50dp"
             android:background="@drawable/login_edittext_bg"
             android:hint="@string/last_name"
+            android:maxLength="30"
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textColorHint="#CCC" />
@@ -62,6 +63,7 @@
             android:layout_marginRight="50dp"
             android:background="@drawable/login_edittext_bg"
             android:hint="@string/email_hint"
+            android:maxLength="25"
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textColorHint="#CCC" />
@@ -76,6 +78,7 @@
             android:background="@drawable/login_edittext_bg"
             android:hint="@string/password_hint"
             android:inputType="textPassword"
+            android:maxLength="25"
             android:textAlignment="center"
             android:textColor="@color/colorAccent"
             android:textColorHint="#CCC" />
