--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,8 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/login_bg">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/layout"
@@ -28,80 +27,81 @@
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
             android:src="@drawable/logo" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textColor="#EEE"
-            android:textSize="17dp"
-            android:text="@string/account_name" />
+            android:text="@string/account_name"
+            android:textColor="#000"
+            android:textSize="17dp" />
 
         <EditText
             android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/login_edittext_bg"
-            android:layout_marginTop="15dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="15dp"
             android:layout_marginRight="50dp"
+            android:background="@drawable/login_edittext_bg"
+            android:hint="@string/username"
+            android:maxLength="25"
             android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:textColorHint="#CCC"
-            android:hint="@string/username"/>
+            android:textColor="#000" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textSize="17dp"
-            android:textColor="#EEE"
+            android:layout_marginTop="40dp"
             android:text="@string/password"
-            android:layout_marginTop="40dp"/>
+            android:textColor="#000"
+            android:textSize="17dp" />
 
         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:inputType="textPassword"
-            android:background="@drawable/login_edittext_bg"
-            android:layout_marginTop="15dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="15dp"
             android:layout_marginRight="50dp"
+            android:background="@drawable/login_edittext_bg"
+            android:hint="@string/password_hint"
+            android:inputType="textPassword"
+            android:maxLength="25"
             android:textAlignment="center"
-            android:textColor="@color/colorAccent"
-            android:textColorHint="#CCC"
-            android:hint="@string/password_hint"/>
+            android:textColor="#000" />
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="70dp"
             android:background="@drawable/login_button_bg"
             android:text="@string/sign_in"
-            android:textColor="@color/colorAccent"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginRight="70dp"/>
+            android:textColor="@color/colorAccent" />
 
         <Button
             android:id="@+id/btn_register_account"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="70dp"
             android:background="@drawable/login_button_bg"
             android:text="@string/create_account"
-            android:textColor="@color/colorAccent"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginRight="70dp"/>
+            android:textColor="@color/colorAccent" />
 
         <TextView
             android:id="@+id/tv_forgot_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorAccent"
-            android:text="@string/forgot_your_login_info"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
-            android:layout_gravity="center_horizontal"/>
+            android:text="@string/forgot_your_login_info"
+            android:textColor="@color/colorAccent" />
 
     </LinearLayout>
 
