--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,10 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="BarTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="ReceitaTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/receitaSecundary</item>
         <item name="colorPrimaryDark">@color/receitaPrimary</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="DespesaTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/despesaSecundary</item>
+        <item name="colorPrimaryDark">@color/despesaPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
