--- a/app/src/main/res/layout/activity_grafico.xml
+++ b/app/src/main/res/layout/activity_grafico.xml
@@ -284,15 +284,15 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#BDBDBD"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout5" />
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout6" />
 
     <LinearLayout
-        android:id="@+id/linearLayout5"
+        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="2dp"
         android:orientation="horizontal"
-        android:paddingTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -300,55 +300,55 @@
         <TextView
             android:id="@+id/tvInicio"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_home_gray"
-            android:gravity="center"
             android:text="@string/inicio"
             android:textColor="#B4B4B4"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvGrafico"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_donut_black"
-            android:gravity="center"
             android:text="@string/grafico"
             android:textColor="#000"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvLimites"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_porcentagem_gray"
-            android:gravity="center"
             android:text="@string/metas"
             android:textColor="#B4B4B4"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvCategorias"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_engrenagem_gray"
-            android:gravity="center"
             android:text="@string/categorias"
             android:textColor="#B4B4B4"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvSair"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_sair_gray"
-            android:gravity="center"
             android:text="@string/sair"
             android:textColor="#B4B4B4"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
     </LinearLayout>
