--- a/app/src/main/res/layout/activity_limites.xml
+++ b/app/src/main/res/layout/activity_limites.xml
@@ -45,7 +45,7 @@
         android:background="@drawable/receita_button_bg"
         android:text="@string/salvar"
         android:textColor="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -102,7 +102,7 @@
         android:maxLength="12"
         android:textColor="#000"
         android:textSize="25sp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        app:layout_constraintBottom_toTopOf="@+id/view2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -112,17 +112,15 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#BDBDBD"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout6" />
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
+        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="2dp"
         android:orientation="horizontal"
-        android:paddingTop="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -130,55 +128,55 @@
         <TextView
             android:id="@+id/tvInicio"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_home_gray"
-            android:gravity="center"
             android:text="@string/inicio"
             android:textColor="#B4B4B4"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvGrafico"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_donut_gray"
-            android:gravity="center"
             android:text="@string/grafico"
             android:textColor="#B4B4B4"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvLimites"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_porcentagem"
-            android:gravity="center"
             android:text="@string/metas"
             android:textColor="#000"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvCategorias"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginRight="30dp"
             android:drawableTop="@drawable/ic_engrenagem_gray"
-            android:gravity="center"
             android:text="@string/categorias"
             android:textColor="#B4B4B4"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvSair"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_sair_gray"
-            android:gravity="center"
             android:text="@string/sair"
             android:textColor="#B4B4B4"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
     </LinearLayout>
