--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,20 +12,31 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="@string/saldo"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvSaldo"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@android:color/black"
         android:hint="@string/valor_hint"
-        android:textSize="40sp"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvSaldoLabel" />
+
+    <ImageView
+        android:id="@+id/imOlho"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:src="@drawable/ic_visibility_gay_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvSaldo"
+        app:layout_constraintStart_toEndOf="@+id/tvSaldo"
         app:layout_constraintTop_toBottomOf="@+id/tvSaldoLabel" />
 
     <TextView
@@ -34,12 +44,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@android:color/black"
-        android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/lvLancamentos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/tvSaldo" />
 
     <ListView
         android:id="@+id/lvLancamentos"
@@ -71,8 +80,8 @@
                 android:id="@+id/btnReceita"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/receita_button_bg"
+                android:layout_marginEnd="5dp"
+                android:backgroundTint="@color/receitaSecundary"
                 android:text="@string/receita"
                 android:textColor="@color/colorAccent" />
 
@@ -80,7 +89,7 @@
                 android:id="@+id/btnDespesa"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/despesa_button_bg"
+                android:backgroundTint="@color/despesaSecundary"
                 android:text="@string/despesa"
                 android:textColor="@color/colorAccent" />
 
@@ -95,61 +104,61 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingTop="4dp">
+            android:layout_marginTop="2dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tvInicio"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
                 android:drawableTop="@drawable/ic_home"
-                android:gravity="center"
                 android:text="@string/inicio"
                 android:textColor="#000"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvGrafico"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
                 android:drawableTop="@drawable/ic_donut_gray"
-                android:gravity="center"
                 android:text="@string/grafico"
                 android:textColor="#B4B4B4"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvLimites"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
                 android:drawableTop="@drawable/ic_porcentagem_gray"
-                android:gravity="center"
                 android:text="@string/metas"
                 android:textColor="#B4B4B4"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvCategorias"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
                 android:drawableTop="@drawable/ic_engrenagem_gray"
-                android:gravity="center"
                 android:text="@string/categorias"
                 android:textColor="#B4B4B4"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvSair"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:drawableTop="@drawable/ic_sair_gray"
-                android:gravity="center"
                 android:text="@string/sair"
                 android:textColor="#B4B4B4"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
