--- a/app/src/main/res/layout/update_lancamento.xml
+++ b/app/src/main/res/layout/update_lancamento.xml
@@ -2,52 +2,72 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="24dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Alterar valor"
+        android:text="@string/altera_valor"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
         android:textColor="#000"
-        android:textSize="18sp" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/etValor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:background="@null"
         android:hint="@string/valor_hint"
         android:inputType="number"
-        android:maxLength="12"
+        android:maxLength="20"
         android:textColor="@android:color/black"
-        android:textSize="35sp" />
+        android:textSize="30sp" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="horizontal">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp" >
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guidelineMiddle"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="0dp"
+            app:layout_constraintGuide_percent=".5" />
 
         <TextView
             android:id="@+id/tvSave"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:text="@string/update_valor"
-            android:textColor="#46A048"
-            android:textSize="18sp" />
+            android:textColor="#ffffff"
+            android:background="@drawable/receita_button_bg"
+            android:gravity="center"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineMiddle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvDelete"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:text="@string/delete_valor"
-            android:textColor="#B84A43"
-            android:textSize="18sp" />
+            android:textColor="#ffffff"
+            android:gravity="center"
+            android:background="@drawable/despesa_button_bg"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guidelineMiddle"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
